--- a/hello-config-env/k8s/deployment.yaml
+++ b/hello-config-env/k8s/deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name:  demo
           image: cloudnatived/demo:hello-config-env
+          args:
+            - "-greeting"
+            - "$(GREETING)"
           ports:
             - containerPort: 8888
           env:
